test/cli/forgot-typed/forgot-typed.rb
extend T::Sig
sig {void} # error: `sig` in untyped file. Did you mean to put `# typed: true` in this file?
def foo
end
